# nova_carter

./: .gitattributes  .gitignore  .gitmodules  README.md  nova_carter.repos
carter_navigation/: CMakeLists.txt  package.xml
carter_navigation/behavior_trees/: navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml
carter_navigation/foxglove_layouts/: foxglove_layout_all_sensors.json  foxglove_layout_nav2.json  joystick_owl.json  virtual_joystick_owl.json
carter_navigation/launch/: mapping.launch.py  nav2.launch.py  teleop.launch.py
carter_navigation/launch/include/: 4_hawks.launch.py  4_hawks_resized.launch.py  4_owls_resized.launch.py  correlated_timestamp_driver.launch.py  foxglove_bridge.launch.py  front_hawk_ess_nvblox.launch.py  hesai.launch.py  joystick.launch.py  occupancy_grid_localizer.launch.py  rplidars.launch.py  segway.launch.py  twist_mux.launch.py  urdf.launch.py
carter_navigation/maps/: nvidia_galileo.yaml  nvidia_galileo_hubble.yaml  nvidia_voyager_l2.yaml  nvidia_voyager_l2_central.yaml
carter_navigation/params/: carter_nav2.yaml  mux.yaml  nvblox_carter.yaml  ps5.config.yaml
docker/: Dockerfile.nova_carter
idealworks_bringup/: CMakeLists.txt  package.xml
idealworks_bringup/src/: iw_navigation.cpp
isaac_ros_segway_rmp/: CMakeLists.txt  package.xml
isaac_ros_segway_rmp/config/: segway_rmp_node.yaml
isaac_ros_segway_rmp/include/isaac_ros_segway_rmp/: segway_rmp_node.hpp
isaac_ros_segway_rmp/launch/: isaac_ros_segway_rmp.launch.py
isaac_ros_segway_rmp/src/: segway_rmp_node.cpp
isaac_ros_segway_rmp/test/: isaac_ros_segway_rmp_pol_test.py
nova_carter_bringup/: CMakeLists.txt  package.xml
nova_carter_bringup/foxglove_layouts/: nova_carter_navigation.json  nova_carter_perceptor.json  nova_carter_perceptor_localization.json  nova_carter_perceptor_with_people.json  nova_carter_sensors.json  nova_carter_teleop.json  nova_carter_virtual_joystick.json
nova_carter_bringup/launch/: lidar_mapping.launch.py  nav_two_poses.launch.py  navigation.launch.py  navigation_in_mega.launch.py  perceptor.launch.py  teleop.launch.py
nova_carter_bringup/launch/include/: hardware_abstraction_layer_include.launch.py  nav_two_poses_include.launch.py  navigation_include.launch.py  perceptor_include.launch.py  segway_include.launch.py  teleop_include.launch.py
nova_carter_bringup/test/: CMakeLists.txt  nova_carter_perceptor_multi_cam_pol.py  nova_carter_perceptor_single_cam_pol.py
nova_carter_description/: CMakeLists.txt  package.xml
nova_carter_description/launch/: nova_carter_description.launch.py
nova_carter_description/meshes/: caster_wheel.mtl  chassis_link.mtl  nova_carter_wheel_right.mtl
nova_carter_description/urdf/: nova_carter.urdf.xacro  nova_carter_platform_macro.urdf.xacro
nova_carter_docking/: CMakeLists.txt  package.xml
nova_carter_docking/launch/: docking_with_apriltag_real.launch.py  docking_with_apriltag_sim.launch.py  docking_with_fp_real.launch.py  docking_with_fp_sim.launch.py  isaac_apriltag_detection_pipeline.launch.py
nova_carter_docking/params/: nova_carter_docking_fp.yaml
nova_carter_docking/scripts/: fp_dock_pose_publisher.py
nova_carter_navigation/: CMakeLists.txt  package.xml
nova_carter_navigation/behavior_trees/: navigate_through_poses_w_replanning_and_recovery.xml
nova_carter_navigation/foxglove_layouts/: foxglove_layout_all_sensors.json  foxglove_layout_nav2.json  joystick_owl.json  virtual_joystick_owl.json
nova_carter_navigation/launch/: lidar_localization.launch.py  map_server.launch.py  navigation.launch.py  navigation_two_poses.launch.py
nova_carter_navigation/maps/: carter_warehouse_navigation.yaml  idealworks_warehouse_navigation.yaml  nvidia_galileo.yaml  nvidia_galileo_hubble.yaml  nvidia_voyager_l2_central.yaml  nvidia_zurich_office.yaml  perceptor_navigation.yaml
nova_carter_navigation/params/: nova_carter_navigation.yaml  nova_carter_two_poses.yaml
nova_carter_navigation/rviz/: carter_mapping.rviz  carter_nav2.rviz
segway_rmp/isaac_ros_segway_rmp/: CMakeLists.txt  package.xml
segway_rmp/isaac_ros_segway_rmp/config/: extension_specs.yaml  namespace_injector_rule_segway_rmp.yaml  segway_rmp_node.yaml
segway_rmp/isaac_ros_segway_rmp/include/isaac_ros_segway_rmp/: segway_rmp_node.hpp
segway_rmp/isaac_ros_segway_rmp/launch/: isaac_ros_segway_rmp.launch.py
segway_rmp/isaac_ros_segway_rmp/src/: segway_rmp_node.cpp
segway_rmp/isaac_ros_segway_rmp/test/: isaac_ros_segway_rmp_pol_test.py
