<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nova_carter_bringup</name>
  <version>3.2.10</version>
  <description>
    Launch files to run isaac ros apps on the Nova Carter robot.
  </description>

  <maintainer email="isaac-ros-maintainers@nvidia.com">Isaac ROS Maintainers</maintainer>

  <license>
    Copyright (c) 2024, NVIDIA CORPORATION. All rights reserved.
    NVIDIA CORPORATION and its licensors retain all intellectual property
    and proprietary rights in and to this software, related documentation
    and any modifications thereto.  Any use, reproduction, disclosure or
    distribution of this software and related documentation without an express
    license agreement from NVIDIA CORPORATION is strictly prohibited.
  </license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>isaac_ros_launch_utils</exec_depend>
  <exec_depend>isaac_ros_mission_client</exec_depend>
  <exec_depend>isaac_ros_perceptor_bringup</exec_depend>
  <exec_depend>isaac_ros_perceptor_python_utils</exec_depend>
  <exec_depend>isaac_ros_segway_rmp</exec_depend>
  <exec_depend>isaac_ros_vda5050_nav2_client_bringup</exec_depend>
  <exec_depend>isaac_ros_mega_node_monitor</exec_depend>
  <exec_depend>joy_linux</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nova_carter_description</exec_depend>
  <exec_depend>nova_carter_docking</exec_depend>
  <exec_depend>nova_carter_navigation</exec_depend>
  <exec_depend>opennav_docking</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>isaac_ros_mega_controller</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>isaac_ros_test</test_depend>
  <test_depend>isaac_ros_r2b_galileo</test_depend>
  <depend>isaac_ros_test_cmake</depend>
  <depend>isaac_mapping_ros</depend>

  <build_depend>isaac_ros_common</build_depend>
  <build_depend>isaac_ros_ess_models_install</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
